--- a/package.json
+++ b/package.json
@@ -15,15 +15,19 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.1",
     "concurrently": "^7.4.0",
+    "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.3",
+    "mongoose-findorcreate": "^3.0.0",
     "morgan": "^1.10.0",
     "nodemailer": "^6.8.0",
     "nodemon": "^2.0.20",
+    "passport": "^0.5.3",
+    "passport-google-oauth20": "^2.0.0",
     "slugify": "^1.6.5"
   }
 }
