--- a/.env
+++ b/.env
@@ -20,3 +20,4 @@ GITHUB_CLIENT_ID = 8141726bfc960d02bd77
 GITHUB_CLIENT_SECRET = 2980786be3f139fe573067fa0122f7a6e44225d2
 FACEBOOK_APP_ID = 918718672452376
 FACEBOOK_APP_SECRET = 680ac46bf7fcbd3dfa66c0398d8acab2
+COOKIE_SESSION_KEYS = ledidan
