--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ JWT_SECRET = 123456
 PAYPAL_CLIENT_ID = AdB9dJ2etPjOu89uvwSq0PX_VyCei1rZq2n25hMSNm7j1UEL5SsSNgr_LZsgLpooSB9bd08WwZ4p_afe
 CLIENT_URL = http://localhost:3000
 CLIENT_URL_VERCEL = https://shop-client-danz.vercel.app
+ADMIN_URL_VERCEL = https://admin-ecommerce-mern.vercel.app
 REACT_APP_URL_SERVER = https://shop-server-danz.herokuapp.com
 EMAIL_SERVICE = gmail
 EMAIL_USERNAME = binbon123123123@gmail.com
