--- a/.env
+++ b/.env
@@ -4,6 +4,7 @@ MONGO_URL = mongodb+srv://admin:Binbon123@shoesecom.ofltc1p.mongodb.net/shoesDat
 JWT_SECRET = 123456
 PAYPAL_CLIENT_ID = AdB9dJ2etPjOu89uvwSq0PX_VyCei1rZq2n25hMSNm7j1UEL5SsSNgr_LZsgLpooSB9bd08WwZ4p_afe
 CLIENT_URL = http://localhost:3000
+ADMIN_URL = http:///localhost:5000
 CLIENT_URL_VERCEL = https://shop-client-danz.vercel.app
 ADMIN_URL_VERCEL = https://admin-ecommerce-mern.vercel.app
 REACT_APP_URL_SERVER = https://shop-server-danz.herokuapp.com
